<resources>
    <string name="app_name">Cosmic Ray Graphing Application</string>
    <string name="activity_dropbox">Dropbox Settings</string>

    <string name="action_dropbox_settings">Dropbox Settings</string>

    <string name="textview_link_status_title">Dropbox Status: </string>
    <string name="button_dropbox_settings">Dropbox Settings</string>
    <string name="button_link_dropbox">Link Dropbox</string>
    <string name="button_refresh_link_status">Refresh</string>
    <string name="title_activity_graph_view">GraphViewActivity</string>


    <string name="action_settings">Settings</string>
    <string name="title_activity_mpachart">MPAChartActivity</string>
    <string name="title_activity_hello_chart">HelloChartActivity</string>
    <string name="choose_x_axis">Choose X-Axis</string>
    <string name="count_string">Count</string>
    <string name="date_string">Date</string>
    <string name="pressure_string">Pressure</string>
    <string name="temperature_string">Temperature</string>
    <string name="choose_y_axis">Choose Y-Axis</string>
    <string name="humidity_string">Humidity</string>
    <string name="graph_string">Generate Graph</string>
    <string name="select_end_time">Select End Time</string>
    <string name="select_start_time">Select Start time</string>


</resources>
