<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:weightSum="1">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/select_start"
                android:id="@+id/textView11"
                android:layout_weight="0.00"
                android:layout_gravity="center_horizontal" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinner_startyear"
                    android:visibility="visible"
                    android:spinnerMode="dialog" />

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinner_startmonth"
                    android:visibility="visible"
                    android:spinnerMode="dialog" />

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinner_startday"
                    android:visibility="visible"
                    android:spinnerMode="dialog" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/select_time"
                android:id="@+id/textView12"
                android:layout_weight="0.00"
                android:layout_gravity="center_horizontal"
                android:longClickable="false"
                android:linksClickable="false" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal" >

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinner_endyear"
                    android:visibility="visible"
                    android:spinnerMode="dialog" />

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinner_endmonth"
                    android:visibility="visible"
                    android:spinnerMode="dialog" />

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinner_endday"
                    android:visibility="visible"
                    android:spinnerMode="dialog" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="30dp"
            android:paddingRight="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/choose_y_axis"
                android:id="@+id/textView13" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:id="@+id/y_group"
                android:onClick="onYRadioGroupClicked" >

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date_string"
                    android:id="@+id/y_date"
                    android:onClick="onYRadioGroupClicked" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/count_string"
                    android:id="@+id/y_count"
                    android:onClick="onYRadioGroupClicked" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/temperature_string"
                    android:id="@+id/y_temp"
                    android:onClick="onYRadioGroupClicked" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pressure_string"
                    android:id="@+id/y_pres"
                    android:onClick="onYRadioGroupClicked" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/humidity_string"
                    android:id="@+id/y_humd"
                    android:checked="false"
                    android:onClick="onYRadioGroupClicked" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="30dp"
            android:paddingRight="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/choose_x_axis"
                android:id="@+id/textView10" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:id="@+id/x_group"
                android:onClick="onXRadioGroupClicked"
                android:clickable="false">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date_string"
                    android:id="@+id/x_date"
                    android:onClick="onXRadioGroupClicked" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/count_string"
                    android:id="@+id/x_count"
                    android:onClick="onXRadioGroupClicked" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/temperature_string"
                    android:id="@+id/x_temp"
                    android:onClick="onXRadioGroupClicked" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pressure_string"
                    android:id="@+id/x_pres"
                    android:onClick="onXRadioGroupClicked" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/humidity_string"
                    android:id="@+id/x_humd"
                    android:checked="false"
                    android:onClick="onXRadioGroupClicked" />

            </RadioGroup>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/graph_string"
            android:onClick="onClickHelloChart"
            android:id="@+id/Hellobutton"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>


</LinearLayout>