<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/textview_dropbox_status_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textview_link_status_title"
            android:textSize="18sp"
            android:layout_alignParentStart="true"
            android:layout_margin="10dp" />

        <TextView
                android:id="@+id/textview_dropbox_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:autoText="false"
                android:hint="Dropbox link status"
                android:layout_alignTop="@+id/textview_dropbox_status_title"
                android:layout_centerHorizontal="true"
            android:layout_margin="10dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Linked Account:"
            android:id="@+id/textview_linked_account_title"
            android:textSize="18sp"
            android:layout_margin="10dp" />

        <TextView
            android:id="@+id/textview_linked_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Account Info"
            android:textSize="18sp"
            android:layout_alignParentTop="true"
            android:layout_alignRight="@+id/textview_dropbox_status_title"
            android:layout_alignEnd="@+id/textview_dropbox_status_title"
            android:layout_margin="10dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_margin="20dp">

        <Button
                android:id="@+id/button_refresh_link_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_refresh_link_status"
                android:onClick="onClickRefreshLinkStatus"
                android:layout_gravity="center_horizontal"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
            android:layout_margin="5dp"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button_link_dropbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_link_dropbox"
            android:onClick="onClickLinkDropbox"
            android:layout_gravity="center_horizontal"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="5dp"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>
